--- a/index.html
+++ b/index.html
@@ -1472,6 +1472,22 @@
         }
       })();
 
+      // Error banner
+      (function () {
+        const p = new URLSearchParams(location.search);
+        if (p.get("error") === "1") {
+          const note = document.createElement("div");
+          note.textContent =
+            "Sorry—your message did not send. Please try again or email us directly.";
+          note.style.cssText =
+            "margin:16px 0;padding:12px 16px;border-radius:8px;background:#ffe6e6;color:#8a1f1f;font-weight:600;";
+          document
+            .querySelector("#contactForm")
+            ?.insertAdjacentElement("beforebegin", note);
+          window.history.replaceState({}, "", location.pathname);
+        }
+      })();
+
       // Newsletter form fake submit
       document
         .getElementById("newsletterForm")
